@@ -16,18 +16,15 @@
 
 package com.hedera.services.bdd.junit.support.validators.block;
 
-import static com.hedera.node.app.hapi.utils.CommonPbjConverters.fromPbj;
 import static com.hedera.services.bdd.junit.hedera.ExternalPath.ADDRESS_BOOK;
 import static com.hedera.services.bdd.junit.hedera.ExternalPath.SAVED_STATES_DIR;
 import static com.hedera.services.bdd.junit.hedera.ExternalPath.SWIRLDS_LOG;
 import static com.hedera.services.bdd.junit.hedera.NodeSelector.byNodeId;
 import static com.hedera.services.bdd.junit.hedera.utils.WorkingDirUtils.STATE_METADATA_FILE;
 import static com.hedera.services.bdd.junit.hedera.utils.WorkingDirUtils.loadAddressBookWithDeterministicCerts;
-import static com.hedera.services.bdd.junit.support.BlockStreamAccess.BLOCK_STREAM_ACCESS;
 import static java.util.Objects.requireNonNull;
 
 import com.hedera.hapi.block.stream.Block;
-import com.hedera.hapi.block.stream.BlockItem;
 import com.hedera.hapi.block.stream.output.MapChangeKey;
 import com.hedera.hapi.block.stream.output.MapChangeValue;
 import com.hedera.hapi.block.stream.output.StateChanges;
@@ -38,7 +35,6 @@ import com.hedera.node.app.blocks.BlockStreamService;
 import com.hedera.node.app.config.BootstrapConfigProviderImpl;
 import com.hedera.node.app.config.ConfigProviderImpl;
 import com.hedera.node.app.fees.FeeService;
-import com.hedera.node.app.hapi.utils.forensics.TransactionParts;
 import com.hedera.node.app.ids.EntityIdService;
 import com.hedera.node.app.info.NodeInfoImpl;
 import com.hedera.node.app.records.BlockRecordService;
@@ -78,9 +74,7 @@ import edu.umd.cs.findbugs.annotations.Nullable;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.InstantSource;
-import java.util.Comparator;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -89,8 +83,6 @@ import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.StreamSupport;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -116,46 +108,11 @@ public class StateChangesValidator implements BlockStreamValidator {
     private final MerkleStateRoot state = new MerkleStateRoot();
     private final StateChangesSummary stateChangesSummary = new StateChangesSummary(new TreeMap<>());
 
-    public static void main(String[] args) throws IOException {
-        //        final var sampleSwirldsLog =
-        //
-        // "/Users/michaeltinker/Dev/hedera-services/hedera-node/test-clients/build/hapi-test/node0/output/swirlds.log";
-        final var testBlocksLoc =
-                "/Users/michaeltinker/Dev/hedera-services/hedera-node/test-clients/build/hapi-test/node0/data/block-streams/block-0.0.3";
-        final var blocks = BLOCK_STREAM_ACCESS.readBlocks(Paths.get(testBlocksLoc));
-        final var largestIs = IntStream.range(0, blocks.size())
-                .boxed()
-                .sorted(Comparator.<Integer>comparingInt(
-                        i -> -blocks.get(i).items().size()))
-                .limit(2)
-                .toList();
-        final var block = blocks.get(largestIs.getLast());
-        System.out.println(
-                "Largest block (#" + block.items().getFirst().headerOrThrow().number() + ") has "
-                        + block.items().size() + " items");
-        final var kinds = block.items().stream()
-                .collect(Collectors.groupingBy(item -> item.items().kind(), Collectors.counting()));
-        System.out.println(kinds);
-        final var numResults =
-                block.items().stream().filter(BlockItem::hasTransactionResult).count();
-        System.out.println("It has " + numResults + " results");
-        int numToPrint = 10;
-        for (final var item : block.items()) {
-            if (item.hasTransaction()) {
-                final var parts = TransactionParts.from(fromPbj(item.transactionOrThrow()));
-                System.out.println(parts.body());
-                if (numToPrint-- == 0) {
-                    break;
-                }
-            }
-        }
-        //        final var validator = new StateChangesValidator(Bytes.EMPTY, Paths.get(sampleSwirldsLog));
-        //        validator.validateBlocks(blocks);
-        //        System.out.println("465 Block" + blocks.get(465));
-        //        blocks.get(465).items().stream()
-        //                .filter(b -> b.hasTransaction())
-        //                .map(b -> TransactionParts.from(fromPbj(b.transaction())))
-        //                .forEach(System.out::println);
+    public static void main(String[] args) {
+        final var swirldsLog =
+                "/Users/michaeltinker/YetYetAnotherDev/hedera-services/hedera-node/test-clients/build/hapi-test/node0/output/swirlds.log";
+        final var hashes = getMaybeLastHashMnemonics(Path.of(swirldsLog));
+        System.out.println(hashes);
     }
 
     /**
@@ -497,17 +454,20 @@ public class StateChangesValidator implements BlockStreamValidator {
 
     private static @Nullable Map<String, String> getMaybeLastHashMnemonics(final Path path) {
         StringBuilder sb = null;
-        boolean sawPlatformStateHash = false;
+        boolean sawAllChildHashes = false;
         try {
             final var lines = Files.readAllLines(path);
             for (final var line : lines) {
-                if (line.startsWith("(root) State")) {
+                if (line.startsWith("(root)")) {
                     sb = new StringBuilder();
-                    sawPlatformStateHash = false;
+                    sawAllChildHashes = false;
                 } else if (sb != null) {
-                    sawPlatformStateHash = sawPlatformStateHash || line.contains("PlatformState");
-                    if (!sawPlatformStateHash) {
-                        sb.append(line).append('\n');
+                    if (!line.contains("PlatformState")) {
+                        final var childStateMatcher = CHILD_STATE_PATTERN.matcher(line);
+                        sawAllChildHashes |= !childStateMatcher.matches();
+                        if (!sawAllChildHashes) {
+                            sb.append(line).append('\n');
+                        }
                     }
                 }
             }
